Fix square sizes on mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -12,13 +12,22 @@ body {
 .grid {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
 
 .square {
   border-radius: 1em;
+  background-color: white;
+}
+
+.landscape {
   width: 5vw;
   height: 5vw;
-  background-color: white;
+}
+
+.portrait {
+  width: 5vh;
+  height: 5vh;
 }
 
 svg {
